@@ -341,3 +341,4 @@
     - Corretta selezione iniziale elenco lingue.
     - Recupera correttamente le informazioni su bitmap RLE.
     - Reduced flickering when moving the splitter.
+    - Disabled WoW filesystem redirection.
