@@ -685,3 +685,4 @@
     - 言語リストボックスの初期選択を修正。
     - 正しくRLEビットマップの情報を取得します。
     - 区分線を動かすときのちらつきを軽減した。
+    - WoW ファイルシステム リダイレクションを無効化。
